

			     BZFlag release notes

* Thief Flag - Dave Brosius
* MsgPlayerUpdate now has order, reject ooo packets - Dave Brosius
* Removed old UDP queueing code and headers - Micah Dowty
* Convert closed FlagIds to flexible FlagDesc's - Micah Dowty, Dave Brosius
* Add back PNG support from 1.8 - Dave Brosius, Sean Morrison
* Add back BZDB from 1.8 - David Trowbridge
* Seer, Masquerad Flags - Dave Brosius
* Don't broadcast single player messages - Dave Brosius
* Customizable map size in maps - Jeff Myers
* Drive and Shoot thru options in maps - Jeff Myers
* Show Team kill score in Scoreboard - Dave Brosius
* Beginnings of flag 'negotiation' - Dave Brosius
* Pass reason in MsgKilled, add support for SR noise - Dave Brosius
* Remove unnessary MsgScore from player to server - Dave Brosius
* Remove old lag pings - Dave Brosius
* BeOS port - Francois Revol
* Collision detection fixes - David Trowbridge, Jeff Myers
* PlayerId -> ubyte - David Trowbridge, Frank Thilo
* Get rid of reconnect port - David Trowbridge
* Hunt opponent in HUD - Adam Krell, David Trowbridge
* Flag system cleanup - Dave Brosius

BZFlag 1.7g2 "Steely Eyed Banana" (was 1.7g1)
-------------------------------------------------------

* public release now under LGPL v2.1 - Tim Riker
* change LICENSE to COPYING - Tim Riker
* server administration stuff - Jeff Myers, Frank Thilo, David Trowbridge
* admin-by-keys - Michael Hoffman
* /help messages - Michael Hoffman, David Trowbridge
* New super-bullet texture - Justin Zaun, Jeff Mills, David Trowbridge
* IRIX fixes - David Trowbridge
* cygwin/mingw32 fixes - Tupone Alfredo
* Solaris fixes - David Trowbridge
* OSX Fixes - Sean Morrison, David Wollner
* server list cache - Michael Hoffman
* E-mail field fixes - Lars Luthman
* colorized console - Dave R (Trepan), David Trowbridge
* automake/autoconf - Tupone Alfredo, David Trowbridge, Tim Riker
* check for unknown message types - Frank Thilo